Requisito 3: Adiciona divs com a classe ball e css a essa classe

--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-.
+.ball{
+    border: 1px solid rgb(59, 13, 13);
+    border-radius: 50%;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+}
